# Persona-Foq

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements-gpu.txt  requirements.txt
configs/accelerate/: multi_gpu.yaml  single_gpu.yaml
configs/experiments/: ablation_eval_steer.yaml  ablation_layer.yaml  ctrl_benign_persona.yaml  ctrl_highresource_squad.yaml  ctrl_random_vector.yaml  reproduce_3090.yaml  reproduce_a100.yaml  smoke.yaml
docs/: explainer.html
scripts/: diagnose.py  download_assets.py  plot_results.py  smoke_3090.sh  smoke_cpu.sh
slurm/: devtest.sbatch  reproduce_a100.sbatch  setup_env.sh
src/pf/: __init__.py  cli.py  config.py  data.py  evaluate.py  experiment.py  interventions.py  logging_utils.py  persona.py  registry.py  reproducibility.py  runlog.py  scoring.py  steering.py  train_sft.py
tests/: _bootstrap.py  conftest.py  test_config.py  test_data.py  test_experiment.py  test_imports.py  test_interventions.py  test_logging.py  test_persona.py  test_reproducibility.py  test_runlog.py  test_scoring.py
